# tct-trs

./: .ghci  .gitignore  .travis.yml  CHANGELOG  CHANGELOG.md  ISSUES.md  LICENSE  README.md  cabal.project  stack-13.20.yaml  stack.dev.yaml  stack.master.yaml  stack.termcomp2017.yaml  stack.yaml  tct-main.cabal  tct-trs.cabal
examples/RaML/: appendAll.raml.trs  bfs.raml.trs  bft_mmult.raml.trs  bitonic.raml.trs  bitvectors.raml.trs  clevermmult.raml.trs  duplicates.raml.trs  dyade.raml.trs  eratosthenes.raml.trs  flatten.raml.trs  insertionsort.raml.trs  listsort.raml.trs  longestCommonSubsequence.raml.trs  matrix.raml.trs  mergesort.raml.trs  minsort.raml.trs  queue.raml.trs  quicksort.raml.trs  rationalPotential.raml.trs  splitandsort.raml.trs  subtrees.raml.trs  tctres.org  tuples.raml.trs
examples/SexprRS/: fold.trs  map.trs
examples/jones/: jones1.trs  jones2.trs  jones4.trs  jones5.trs  jones6.trs
examples/lists/: flatten.trs  reverse.trs  shuffle.trs  shuffleshuffle.trs
examples/misc/: clique.trs  dcquad.trs  egypt.trs  eratosthenes.trs  id.trs  lcs.trs  mmult-nat.trs  qbf.trs  sat.trs  z86.trs
examples/peano arithmetic/: bits.trs  div.trs  mult.trs  mult2.trs  quad.trs  square.trs
examples/sorting/: bubblesort-nat.trs  isort.trs  mergesort-nat.trs  mergesort.trs  quicksort-nat.trs  quicksort.trs
exe/: Main.hs
src/: Main.hs
src/Tct/: Trs.hs
src/Tct/Common/: Polynomial.hs  Ring.hs
src/Tct/Trs/: Config.hs  Data.hs  Declarations.hs  Interactive.hs  Interpretation.hs  Main.hs  Orientation.hs  Problem.hs  Processor.hs  Processors.hs  Strategies.hs  TermRewriting.hs
src/Tct/Trs/Data/: ArgumentFiltering.hs  Arguments.hs  CeTA.hs  ComplexityPair.hs  DependencyGraph.hs  Mode.hs  PartialProcessor.hs  Precedence.hs  Problem.hs  ProblemKind.hs  Rewriting.hs  RuleSelector.hs  RuleSet.hs  Rules.hs  SMT.hs  Signature.hs  Symbol.hs  Trs.hs  Xml.hs
src/Tct/Trs/Encoding/: ArgumentFiltering.hs  Interpretation.hs  SafeMapping.hs  UsablePositions.hs  UsableRules.hs
src/Tct/Trs/Encoding/Bounds/: Automata.hs  Violations.hs
src/Tct/Trs/Encoding/Bounds/Violations/: Find.hs  Fix.hs
src/Tct/Trs/Encoding/Matrix/: Matrix.hs  MatrixInterpretation.hs
src/Tct/Trs/Method/: Bounds.hs  ComplexityPair.hs  Compose.hs  Decompose.hs  Empty.hs  EpoStar.hs  InnermostRuleRemoval.hs  ToInnermost.hs  Weightgap.hs  WithCertification.hs
src/Tct/Trs/Method/DP/: DependencyGraph.hs  DependencyPairs.hs  UsableRules.hs
src/Tct/Trs/Method/DP/DPGraph/: Compose.hs  DecomposeDG.hs  PathAnalysis.hs  PredecessorEstimation.hs  RemoveHead.hs  RemoveHeads.hs  RemoveInapplicable.hs  RemoveWeakSuffix.hs  RemoveWeakSuffixes.hs  SimplifyRHS.hs  Trivial.hs
src/Tct/Trs/Method/Matrix/: Matrix.hs  MatrixFun.hs  MatrixInterpretation.hs  NaturalMI.hs
src/Tct/Trs/Method/Poly/: NaturalPI.hs
src/Tct/Trs/Poly/: NaturalPolynomialInterpretation.hs  PolynomialInterpretation.hs
src/Tct/Trs/Processor/: AmortisedAnalysis.hs  Bounds.hs  CheckProperty.hs  ComplexityPair.hs  Decompose.hs  DecreasingLoops.hs  Empty.hs  EpoStar.hs  InnermostRuleRemoval.hs  ToInnermost.hs  WithCertification.hs
src/Tct/Trs/Processor/ARA/: Constants.hs  Exception.hs  InferTypes.hs  Pretty.hs
src/Tct/Trs/Processor/ARA/ByInferenceRules/: Analyzer.hs  AnalyzerCondition.hs  AnalyzerCost.hs  AnalyzerDatatype.hs  AnalyzerSignature.hs  CmdLineArguments.hs  ConstraintSolver.hs  HelperFunctions.hs  InfTreeNode.hs  InferenceRules.hs  Operator.hs  Prove.hs  TypeSignatures.hs
src/Tct/Trs/Processor/ARA/ByInferenceRules/Analyzer/: Ops.hs  StartingProve.hs
src/Tct/Trs/Processor/ARA/ByInferenceRules/AnalyzerCondition/: Pretty.hs  Type.hs
src/Tct/Trs/Processor/ARA/ByInferenceRules/AnalyzerCost/: Pretty.hs  Type.hs
src/Tct/Trs/Processor/ARA/ByInferenceRules/AnalyzerDatatype/: Ops.hs  Pretty.hs  Type.hs
src/Tct/Trs/Processor/ARA/ByInferenceRules/AnalyzerSignature/: Ops.hs  Type.hs
src/Tct/Trs/Processor/ARA/ByInferenceRules/CmdLineArguments/: Parse.hs  Type.hs
src/Tct/Trs/Processor/ARA/ByInferenceRules/ConstraintSolver/: Heuristic.hs  Inserts.hs  SMT.hs
src/Tct/Trs/Processor/ARA/ByInferenceRules/ConstraintSolver/SMT/: ConvertSolutionToData.hs  ConvertToSMTProblem.hs  IO.hs  Type.hs
src/Tct/Trs/Processor/ARA/ByInferenceRules/Data/: Type.hs
src/Tct/Trs/Processor/ARA/ByInferenceRules/Graph/: Ops.hs
src/Tct/Trs/Processor/ARA/ByInferenceRules/InfTreeNode/: Ops.hs  Pretty.hs  Type.hs
src/Tct/Trs/Processor/ARA/ByInferenceRules/InferenceRules/: InfRuleComposition.hs  InfRuleFunction.hs  InfRuleIdentity.hs  InfRuleMisc.hs  InfRuleShare.hs  InfRuleWeak.hs  Ops.hs
src/Tct/Trs/Processor/ARA/ByInferenceRules/Operator/: Pretty.hs  Type.hs
src/Tct/Trs/Processor/ARA/ByInferenceRules/Prove/: Ops.hs  Pretty.hs  Type.hs
src/Tct/Trs/Processor/ARA/ByInferenceRules/Vector/: Pretty.hs  Type.hs
src/Tct/Trs/Processor/ARA/Exception/: Pretty.hs  Type.hs
src/Tct/Trs/Processor/ARA/Pretty/: Pretty.hs
src/Tct/Trs/Processor/DP/: DependencyPairs.hs  UsableRules.hs
src/Tct/Trs/Processor/DP/DPGraph/: DecomposeDG.hs  PathAnalysis.hs  PredecessorEstimation.hs  RemoveHeads.hs  RemoveInapplicable.hs  RemoveWeakSuffixes.hs  SimplifyRHS.hs  Trivial.hs
src/Tct/Trs/Processor/Matrix/: MI.hs  NaturalMI.hs
src/Tct/Trs/Processor/Poly/: NaturalPI.hs
src/Tct/Trs/Strategy/: Certify.hs  Competition.hs  Derivational.hs  Raml.hs  Runtime.hs  Runtime.hs.Comp2016  Runtime.hs.Comp2017  Web.hs  WebAutomatic.hs  WebCustom.hs
tct-trs/: Main.hs
