name:          tct-trs
version:       3.2.0
stability:     experimental
author:
  Martin Avanzini, Andreas Kochesser, Georg Moser, Michael Schaper, Maria Schett
maintainer:
  Martin Avanzini <martin.avanzini@uibk.ac.at>,
  Michael Schaper <michael.schaper@uibk.ac.at>,
license:       BSD3
license-file:  LICENSE
category:      Program Analysis
synopsis:      A Complexity Framework for Term Rewrite Systems
description:
  The Tyrolean Complexity Tool (TcT for short) is a tool for proving
  resource bounds for different formal systems. This package provides
  techniques for proving upper bounds on the derivational and runtime
  complexity of term rewriting systems automatically.
build-type:    Simple
cabal-version: >= 1.8

source-repository head
  type:     git
  location: git://github.com/ComputationWithBoundedResources/tct-trs

executable tct-trs
  main-is:        Main.hs
  hs-source-dirs: tct-trs
  build-depends:  base == 4.*, tct-core, tct-trs
  extensions:     FlexibleInstances, MultiParamTypeClasses
  ghc-options:
    -Wall -threaded -fno-warn-orphans -fno-spec-constr-count -rtsopts -with-rtsopts=-N
  extensions:
    ConstraintKinds,
    DataKinds,
    DeriveFoldable,
    DeriveFunctor,
    DeriveTraversable,
    FlexibleContexts,
    FlexibleInstances,
    GADTs,
    GeneralizedNewtypeDeriving,
    MultiParamTypeClasses,
    TypeFamilies,
    TypeOperators


library
  hs-source-dirs:
    src
  exposed-modules:
    Tct.Trs
    Tct.Trs.Config
    Tct.Trs.Data
    Tct.Trs.Data.Arguments
    Tct.Trs.Data.CeTA
    Tct.Trs.Data.ComplexityPair
    Tct.Trs.Data.DependencyGraph
    Tct.Trs.Data.Precedence
    Tct.Trs.Data.Problem
    Tct.Trs.Data.ProblemKind
    Tct.Trs.Data.Rewriting
    Tct.Trs.Data.Rules
    Tct.Trs.Data.RuleSelector
    Tct.Trs.Data.RuleSet
    Tct.Trs.Data.Signature
    Tct.Trs.Data.Symbol
    Tct.Trs.Encoding.ArgumentFiltering
    Tct.Trs.Encoding.Bounds.Automata
    Tct.Trs.Encoding.Bounds.Violations
    Tct.Trs.Encoding.Bounds.Violations.Find
    Tct.Trs.Encoding.Bounds.Violations.Fix
    Tct.Trs.Encoding.Interpretation
    Tct.Trs.Encoding.Matrix.Matrix
    Tct.Trs.Encoding.Matrix.MatrixInterpretation
    Tct.Trs.Encoding.SafeMapping
    Tct.Trs.Encoding.UsablePositions
    Tct.Trs.Encoding.UsableRules
    Tct.Trs.Interactive
    Tct.Trs.Processor.AmortisedAnalysis
    Tct.Trs.Processor.ARA.Constants
    Tct.Trs.Processor.ARA.ByInferenceRules.Analyzer
    Tct.Trs.Processor.ARA.ByInferenceRules.Analyzer.Ops
    Tct.Trs.Processor.ARA.ByInferenceRules.Analyzer.StartingProve
    Tct.Trs.Processor.ARA.ByInferenceRules.AnalyzerCondition
    Tct.Trs.Processor.ARA.ByInferenceRules.AnalyzerCondition.Pretty
    Tct.Trs.Processor.ARA.ByInferenceRules.AnalyzerCondition.Type
    Tct.Trs.Processor.ARA.ByInferenceRules.AnalyzerCost
    Tct.Trs.Processor.ARA.ByInferenceRules.AnalyzerCost.Pretty
    Tct.Trs.Processor.ARA.ByInferenceRules.AnalyzerCost.Type
    Tct.Trs.Processor.ARA.ByInferenceRules.AnalyzerDatatype
    Tct.Trs.Processor.ARA.ByInferenceRules.AnalyzerDatatype.Ops
    Tct.Trs.Processor.ARA.ByInferenceRules.AnalyzerDatatype.Pretty
    Tct.Trs.Processor.ARA.ByInferenceRules.AnalyzerDatatype.Type
    Tct.Trs.Processor.ARA.ByInferenceRules.AnalyzerSignature
    Tct.Trs.Processor.ARA.ByInferenceRules.AnalyzerSignature.Ops
    Tct.Trs.Processor.ARA.ByInferenceRules.Graph.Ops
    Tct.Trs.Processor.ARA.ByInferenceRules.AnalyzerSignature.Type
    Tct.Trs.Processor.ARA.ByInferenceRules.CmdLineArguments
    Tct.Trs.Processor.ARA.ByInferenceRules.CmdLineArguments.Parse
    Tct.Trs.Processor.ARA.ByInferenceRules.CmdLineArguments.Type
    Tct.Trs.Processor.ARA.ByInferenceRules.ConstraintSolver
    Tct.Trs.Processor.ARA.ByInferenceRules.ConstraintSolver.Inserts
    Tct.Trs.Processor.ARA.ByInferenceRules.ConstraintSolver.SMT
    Tct.Trs.Processor.ARA.ByInferenceRules.ConstraintSolver.SMT.ConvertSolutionToData
    Tct.Trs.Processor.ARA.ByInferenceRules.ConstraintSolver.SMT.ConvertToSMTProblem
    Tct.Trs.Processor.ARA.ByInferenceRules.ConstraintSolver.SMT.IO
    Tct.Trs.Processor.ARA.ByInferenceRules.ConstraintSolver.Heuristic
    Tct.Trs.Processor.ARA.ByInferenceRules.ConstraintSolver.SMT.Type
    Tct.Trs.Processor.ARA.ByInferenceRules.Data.Type
    Tct.Trs.Processor.ARA.ByInferenceRules.HelperFunctions
    Tct.Trs.Processor.ARA.ByInferenceRules.InfTreeNode
    Tct.Trs.Processor.ARA.ByInferenceRules.InfTreeNode.Ops
    Tct.Trs.Processor.ARA.ByInferenceRules.InfTreeNode.Pretty
    Tct.Trs.Processor.ARA.ByInferenceRules.InfTreeNode.Type
    Tct.Trs.Processor.ARA.ByInferenceRules.InferenceRules
    Tct.Trs.Processor.ARA.ByInferenceRules.InferenceRules.InfRuleComposition
    Tct.Trs.Processor.ARA.ByInferenceRules.InferenceRules.InfRuleFunction
    Tct.Trs.Processor.ARA.ByInferenceRules.InferenceRules.InfRuleIdentity
    Tct.Trs.Processor.ARA.ByInferenceRules.InferenceRules.InfRuleMisc
    Tct.Trs.Processor.ARA.ByInferenceRules.InferenceRules.InfRuleShare
    Tct.Trs.Processor.ARA.ByInferenceRules.InferenceRules.InfRuleWeak
    Tct.Trs.Processor.ARA.ByInferenceRules.InferenceRules.Ops
    Tct.Trs.Processor.ARA.ByInferenceRules.Operator
    Tct.Trs.Processor.ARA.ByInferenceRules.Operator.Pretty
    Tct.Trs.Processor.ARA.ByInferenceRules.Operator.Type
    Tct.Trs.Processor.ARA.ByInferenceRules.Prove
    Tct.Trs.Processor.ARA.ByInferenceRules.Prove.Ops
    Tct.Trs.Processor.ARA.ByInferenceRules.Prove.Pretty
    Tct.Trs.Processor.ARA.ByInferenceRules.Prove.Type
    Tct.Trs.Processor.ARA.ByInferenceRules.TypeSignatures
    Tct.Trs.Processor.ARA.ByInferenceRules.Vector.Pretty
    Tct.Trs.Processor.ARA.ByInferenceRules.Vector.Type
    Tct.Trs.Processor.ARA.Exception
    Tct.Trs.Processor.ARA.Exception.Pretty
    Tct.Trs.Processor.ARA.Exception.Type
    Tct.Trs.Processor.ARA.InferTypes
    Tct.Trs.Processor.ARA.Pretty
    Tct.Trs.Processor.ARA.Pretty.Pretty
    Tct.Trs.Processor.Bounds
    Tct.Trs.Processor.ComplexityPair
    Tct.Trs.Processor.Decompose
    Tct.Trs.Processor.DecreasingLoops
    Tct.Trs.Processor.DP.DependencyPairs
    Tct.Trs.Processor.DP.DPGraph.DecomposeDG
    Tct.Trs.Processor.DP.DPGraph.PathAnalysis
    Tct.Trs.Processor.DP.DPGraph.PredecessorEstimation
    Tct.Trs.Processor.DP.DPGraph.RemoveHeads
    Tct.Trs.Processor.DP.DPGraph.RemoveInapplicable
    Tct.Trs.Processor.DP.DPGraph.RemoveWeakSuffixes
    Tct.Trs.Processor.DP.DPGraph.SimplifyRHS
    Tct.Trs.Processor.DP.DPGraph.Trivial
    Tct.Trs.Processor.DP.UsableRules
    Tct.Trs.Processor.Empty
    Tct.Trs.Processor.EpoStar
    Tct.Trs.Processor.InnermostRuleRemoval
    Tct.Trs.Processor.Matrix.NaturalMI
    Tct.Trs.Processor.Matrix.MI
    Tct.Trs.Processor.Poly.NaturalPI
    Tct.Trs.Processors
    Tct.Trs.Processor.ToInnermost
    Tct.Trs.Processor.WithCertification
    Tct.Trs.Strategies
    Tct.Trs.Strategy.Certify
    Tct.Trs.Strategy.Competition
    Tct.Trs.Strategy.Derivational
    Tct.Trs.Strategy.Runtime
    Tct.Trs.Strategy.Web
  build-depends:
    array              == 0.5.*,
    base               == 4.*,
    bytestring         >= 0.10.4 && < 0.10.7,
    containers         >= 0.5 && < 0.6,
    fgl                == 5.5.*,
    filepath           >= 1.3,
    mtl                >= 2.1 && <= 2.3,
    parsec             == 3.1.*,
    process            >= 1.1,
    temporary          == 1.2.0.*,
    vector             == 0.11.*,

    term-rewriting     == 0.*,
    term-rewriting-xml == 0.1.0.*,

    slogic             == 0.*,
    tct-common         == 3.2.*,
    tct-core           == 3.2.*,

    -- ARA stuff
    term-rewriting-ext == 0.*,
    pretty,
    ansi-wl-pprint,
    lens               >= 4.13,
    text,
    unordered-containers >=0.2,
    parallel,
    monad-parallel


  ghc-options:
    -Wall -fno-warn-orphans -fno-spec-constr-count -rtsopts -with-rtsopts=-N
  extensions:
    ConstraintKinds,
    DataKinds,
    DeriveFoldable,
    DeriveFunctor,
    DeriveTraversable,
    FlexibleContexts,
    FlexibleInstances,
    GADTs,
    GeneralizedNewtypeDeriving,
    MultiParamTypeClasses,
    TypeFamilies,
    TypeOperators

